components/data-viewer/base/data-viewer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-viewer
  namespace: fia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-viewer
  template:
    metadata:
      labels:
        app: data-viewer
    spec:
      containers:
      - name: data-viewer
        image: ghcr.io/fiaisis/data-viewer@sha256:095d27f95d083a70ba07b5a9baabf931a9d513d6434c38cd7e401bccf305a7af
        ports:
          - name: api-port
            protocol: TCP
            containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
