components/data-viewer/base/data-viewer-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: data-viewer
  namespace: fia
spec:
  selector:
    app: scigateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
